--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^4.16.2",
     "jest": "^22.3.0",
     "lodash": "^4.17.5",
-    "standard": "^10.0.3"
+    "standard": "^10.0.3",
+    "supertest": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^4.18.0",
